[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scripts/Player_motorcycle.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/tire_side_2.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/tire_side_1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/Player_back.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/Player_side.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/tire_back_1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Characters/Player/motorcycle/tire_back_2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "side",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "back",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "side",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "side",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 31.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 0.25 )

[node name="Player_motorcycle" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
script = ExtResource( 1 )

[node name="motorcycle" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "side"
flip_h = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="tire_back" type="AnimatedSprite" parent="motorcycle"]
frames = SubResource( 2 )
animation = "back"
speed_scale = 10.0

[node name="tire_front" type="AnimatedSprite" parent="motorcycle"]
show_behind_parent = true
position = Vector2( -63, -23 )
frames = SubResource( 3 )
animation = "side"
speed_scale = 10.0
flip_h = true

[node name="CollisionBack" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.5 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionSide" type="CollisionPolygon2D" parent="."]
position = Vector2( -7, 2.943 )
rotation = 0.994838
polygon = PoolVector2Array( -4.48118, -53.5855, 8.51324, -57.0705, 10.1906, -55.9812, 10.4846, -54.5979, 10.528, -50.9926, 16.6059, -53.0074, 21.8885, -51.9616, 30.2753, -46.5152, 33.3793, -42.1146, 34.3049, -34.3594, 19.282, 31.0035, 7.29998, 49.4543, 3.15006, 50.3364, 0.0894053, 49.5411, -3.80992, 48.2012, -12.1966, 42.7549, -25.3647, 31.8187, -22.9139, 28.0446, -15.9186, -35.9735 )
disabled = true

[node name="Area2D_scale" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_scale"]
position = Vector2( 0, 24.75 )
shape = SubResource( 6 )

[node name="Area2D_Player_motorcycle" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionBack" type="CollisionShape2D" parent="Area2D_Player_motorcycle"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Area2D_Player_motorcycle" to="." method="_on_Area2D_Player_motorcycle_area_entered"]
